--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,4 +4,67 @@
     background-image: url('/static/images/background/0.gif');
     background-size: 200% 100%;
     background-position: top;
+    position: absolute;
+}
+
+#kof > .kof-head{
+    position: absolute;
+    top:0;
+    width: 100%;
+    height: 80px;
+    /* background-color: lightblue; */
+    display: flex;
+    align-items: center;
+
+}
+
+#kof>.kof-head> .kof-head-hp-0{
+height: 40px;
+width: calc(50% - 60px);
+/* background-color: red; */
+margin-left: 20px;
+border:white 5px solid;
+border-right: none;
+box-sizing: border-box;
+}
+
+
+#kof>.kof-head> .kof-head-timer{
+    height: 60px;
+    width:80px;
+    background-color: orange;
+    border:white 5px solid;
+    box-sizing: border-box;
+    font-size: 30px;
+    font-weight: 800;
+    color:#000;
+    /* 水平居中和竖直居中 */
+    text-align: center;
+    line-height: 50px;
+    
+}
+
+
+#kof>.kof-head> .kof-head-hp-1{
+    height: 40px;
+    width: calc(50% - 60px);
+    /* background-color: red; */
+    border:white 5px solid;
+    border-left: none;
+    box-sizing: border-box;
+    
+}
+
+#kof>.kof-head> .kof-head-hp-0>div{
+    float: right;
+background-color: red;
+height: 100%;
+width: 100%;
+}
+
+#kof>.kof-head> .kof-head-hp-1>div{
+    background-color: red;
+height: 100%;
+width: 100%;
+
 }
